Fix up telemetry with ABYO